--- a/SignalRAppHarbor.Web/Web.config
+++ b/SignalRAppHarbor.Web/Web.config
@@ -6,11 +6,7 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-SignalRAppHarbor.Web-2012515184149;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="true" />
@@ -33,26 +29,13 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <profile defaultProvider="DefaultProfileProvider">
-      <providers>
-        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
-      </providers>
-    </profile>
-    <membership defaultProvider="DefaultMembershipProvider">
-      <providers>
-        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="DefaultRoleProvider">
-      <providers>
-        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
-      </providers>
-    </roleManager>
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </sessionState>
+    <customErrors mode="Off">
+    </customErrors>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -74,11 +57,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True" />
-      </parameters>
-    </defaultConnectionFactory>
-  </entityFramework>
 </configuration>
