--- a/SignalRAppHarbor.Web/packages.config
+++ b/SignalRAppHarbor.Web/packages.config
@@ -15,6 +15,12 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Microsoft.Web.Optimization" version="1.0.0-beta" />
   <package id="Modernizr" version="2.5.3" />
+  <package id="Newtonsoft.Json" version="4.5.5" />
+  <package id="SignalR" version="0.5.0" />
+  <package id="SignalR.Hosting.AspNet" version="0.5.0" />
+  <package id="SignalR.Hosting.Common" version="0.5.0" />
+  <package id="SignalR.Js" version="0.5.0" />
+  <package id="SignalR.Server" version="0.5.0" />
   <package id="System.Json" version="4.0.20126.16343" />
   <package id="System.Net.Http" version="2.0.20126.16343" />
   <package id="System.Net.Http.Formatting" version="4.0.20126.16343" />
